<resources>
    <string name="app_name">English Playing</string>
    <string name="txt_learn">Learn</string>
    <string name="check">Check</string>
    <string name="Eng">text</string>
    <string name="transViet">text</string>
    <string name="word">Word</string>
    <string name="vn">VN</string>
    <string name="hintUsername">Input username....</string>
    <string name="hintPassword">Input password....</string>
    <string name="signUp">SIGN UP</string>
    <string name="dialogTitleLoginFail">Login Fail</string>
    <string name="errorSever">Can not connect server!!!</string>
    <string name="errorInternet">Please check your network connection</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="fullname_signup">Fullname: </string>
    <string name="age_signup">Age: </string>
    <string name="dob_signup">DoB: </string>
    <string name="email_signup">Email: </string>
    <string name="username_signup">Username: </string>
    <string name="pass_signup">Password: </string>
    <string name="input_fullname_signup">Input full name...</string>
    <string name="input_age_signup">age...</string>
    <string name="input_dob_signup">Input birthday...</string>
    <string name="input_email_signup">Input email...</string>
    <string name="input_user_signup">Input username...</string>
    <string name="input_pass_signup">Input password...</string>
</resources>
