<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@color/bg_title">

        <ImageButton
            android:id="@+id/imbBackSignup"
            android:layout_width="@dimen/dp_50dp"
            android:layout_height="@dimen/dp_50dp"
            android:src="@drawable/back"
            android:background="@color/bg_title"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/dp_150dp"
            android:layout_marginLeft="@dimen/dp_20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign up"
            android:layout_gravity="center_vertical"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_50sp"
            android:textStyle="bold" />
    </LinearLayout>
    <!--<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">

        <TextView
            android:id="@+id/sign_up_fullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16dp"
            android:layout_marginLeft="@dimen/dp_16dp"
            android:layout_marginTop="@dimen/dp_56dp"
            android:text="Full name: "
            android:textStyle="bold"
            android:textSize="@dimen/sp_30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.005"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edt_sign_up_fullname"
            android:layout_width="278dp"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/custom_tv"
            android:hint="Input fullname..."
            android:paddingLeft="@dimen/dp_15dp"
            app:layout_constraintBaseline_toBaselineOf="@id/sign_up_fullname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/sign_up_fullname"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/sign_up_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="36dp"
            android:text="Age: "
            android:textStyle="bold"
            android:textSize="@dimen/sp_30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_up_fullname"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edt_sign_up_age"
            android:layout_width="71dp"
            android:layout_height="41dp"
            android:background="@drawable/custom_tv"
            android:hint="Age..."
            android:paddingLeft="@dimen/dp_15dp"
            app:layout_constraintBaseline_toBaselineOf="@id/sign_up_age"
            app:layout_constraintStart_toEndOf="@id/sign_up_age"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/sign_up_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:text="DoB: "
            android:textStyle="bold"
            android:textSize="@dimen/sp_30sp"
            app:layout_constraintBaseline_toBaselineOf="@id/sign_up_age"
            app:layout_constraintStart_toEndOf="@id/edt_sign_up_age"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edt_sign_up_dob"
            android:layout_width="173dp"
            android:layout_height="45dp"
            android:background="@drawable/custom_tv"
            android:hint="dd/mm/yyyy"
            android:paddingLeft="@dimen/dp_15dp"
            app:layout_constraintBaseline_toBaselineOf="@id/sign_up_age"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/sign_up_dob"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/sign_up_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:text="Email: "
            android:textStyle="bold"
            android:textSize="@dimen/sp_30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_up_age"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edt_sign_up_email"
            android:layout_width="242dp"
            android:layout_height="47dp"
            android:layout_marginStart="68dp"
            android:layout_marginLeft="68dp"
            android:background="@drawable/custom_tv"
            android:hint="Input email..."
            android:paddingLeft="@dimen/dp_15dp"
            app:layout_constraintBaseline_toBaselineOf="@id/sign_up_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/sign_up_email"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/sign_up_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="40dp"
            android:text="Username: "
            android:textSize="@dimen/sp_30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_up_email"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edt_sign_up_username"
            android:layout_width="244dp"
            android:layout_height="49dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:background="@drawable/custom_tv"
            android:hint="Input username...."
            android:paddingLeft="@dimen/dp_15dp"
            app:layout_constraintBaseline_toBaselineOf="@id/sign_up_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/sign_up_username"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/sign_up_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="36dp"
            android:text="Password: "
            android:textSize="@dimen/sp_30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_up_username"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edt_sign_up_password"
            android:layout_width="241dp"
            android:layout_height="50dp"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:background="@drawable/custom_tv"
            android:hint="Input password..."
            android:paddingLeft="@dimen/dp_15dp"
            android:password="true"
            app:layout_constraintBaseline_toBaselineOf="@id/sign_up_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/sign_up_password"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fullname_signup"
                android:textSize="@dimen/sp_30sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginRight="@dimen/dp_40dp"/>
            <EditText
                android:id="@+id/edt_fullname_signup"
                android:layout_width="@dimen/dp_350dp"
                android:layout_height="@dimen/dp_65dp"
                android:hint="Input full name..."
                android:background="@drawable/custom_tv"
                android:paddingLeft="@dimen/dp_15dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age_signup"
                android:textSize="@dimen/sp_30sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/edt_age_signup"
                android:layout_width="@dimen/dp_85dp"
                android:layout_height="@dimen/dp_65dp"
                android:hint="@string/input_age_signup"
                android:background="@drawable/custom_tv"
                android:paddingLeft="@dimen/dp_15dp"
                android:layout_marginRight="@dimen/dp_54dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dob_signup"
                android:textSize="@dimen/sp_30sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/edt_dob_signup"
                android:layout_width="@dimen/dp_244dp"
                android:layout_height="@dimen/dp_65dp"
                android:hint="@string/input_dob_signup"
                android:background="@drawable/custom_tv"
                android:paddingLeft="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_signup"
                android:textSize="@dimen/sp_30sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginRight="@dimen/dp_85dp"/>
            <EditText
                android:id="@+id/edt_email_signup"
                android:layout_width="@dimen/dp_350dp"
                android:layout_height="@dimen/dp_65dp"
                android:hint="@string/input_email_signup"
                android:background="@drawable/custom_tv"
                android:paddingLeft="@dimen/dp_15dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_signup"
                android:textSize="@dimen/sp_30sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginRight="18dp"/>
            <EditText
                android:id="@+id/edt_user_signup"
                android:layout_width="@dimen/dp_350dp"
                android:layout_height="@dimen/dp_65dp"
                android:hint="@string/input_user_signup"
                android:background="@drawable/custom_tv"
                android:paddingLeft="@dimen/dp_15dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pass_signup"
                android:textSize="@dimen/sp_30sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginRight="18dp"/>
            <EditText
                android:id="@+id/edt_pass_signup"
                android:layout_width="@dimen/dp_350dp"
                android:layout_height="@dimen/dp_65dp"
                android:hint="@string/input_pass_signup"
                android:background="@drawable/custom_tv"
                android:paddingLeft="@dimen/dp_15dp"
                android:password="true"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center">

        <Button
            android:id="@+id/btn_signUp"
            android:layout_width="@dimen/dp_250dp"
            android:layout_height="@dimen/dp_100dp"
            android:background="@drawable/bnt_sign_up"
            android:text="@string/signUp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.524"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />
    </LinearLayout>


</LinearLayout>