<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ShowWordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@color/bg_title">

        <ImageView
            android:id="@+id/img_home"
            android:layout_width="155dp"
            android:layout_height="100dp"
            android:src="@drawable/quesansw" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/btn_speaker"
            android:layout_width="@dimen/dp_70dp"
            android:layout_height="@dimen/dp_70dp"
            android:layout_marginBottom="@dimen/dp_250dp"
            android:src="@drawable/speaker"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_vietnamese" />

        <Button
            android:id="@+id/btn_check_showWord"
            android:layout_width="@dimen/dp_150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dp_132dp"
            android:background="@drawable/btn_bg"
            android:text="@string/check"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20sp_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/tv_vietnamese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_66dp"
            android:text="@string/transViet"
            android:textSize="@dimen/sp_50sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_speaker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_english" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="@dimen/dp_400dp"
            android:layout_height="550dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_16dp"
            android:layout_marginBottom="54dp"
            android:background="@drawable/custom_tv"
            app:layout_constraintBottom_toTopOf="@+id/btn_check_showWord"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="102dp"
            android:layout_marginBottom="12dp"
            android:text="@string/Eng"
            android:textSize="@dimen/dp_70dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_vietnamese"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>