<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/bg_title">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5">

            <Button
                android:id="@+id/btn_speaker"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="83dp"
                android:layout_marginBottom="28dp"
                android:background="@drawable/btn_listen"
                app:layout_constraintBottom_toTopOf="@+id/tv_addWord"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="300dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="28dp"
                android:background="@drawable/custom_tv"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_addWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="26dp"
                android:text="@string/word"
                android:textSize="45sp"
                app:layout_constraintBottom_toTopOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_speaker" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="52dp"
                android:text="@string/vn"
                android:textSize="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_addWord" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <Button
                android:id="@+id/btn_word1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="@+id/btn_word2"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_word2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="@+id/btn_word3"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="@id/btn_word1"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_word3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="@id/btn_word4"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="@+id/btn_word2"
                tools:layout_editor_absoluteY="4dp"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/btn_word4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="@id/btn_word5"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="@+id/btn_word3"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_word5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="@id/btn_word4"
                tools:layout_editor_absoluteY="4dp"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/btn_word6"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="72dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/btn_word7"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_word7"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="@id/btn_word8"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="@id/btn_word6"
                tools:layout_editor_absoluteY="67dp"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/btn_word8"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="@id/btn_word9"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="@id/btn_word7"
                tools:layout_editor_absoluteY="67dp"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/btn_word9"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="@id/btn_word10"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="@id/btn_word8"
                tools:layout_editor_absoluteY="67dp"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/btn_word10"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="@id/btn_word9"
                tools:layout_editor_absoluteY="67dp"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center|top">

            <Button
                android:id="@+id/btn_checkScreen1"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:text="@string/check"
                android:textColor="@color/white"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>